29.dec (ws)
      - make default style configurable in preferences
25.dec (mi)
      - 2 tablature fonts updated
23.dec (ws)
      - fix #8365: Create tuplet crash
22.dec (la)
      - fix #8347: tie in note entry does not work for voice > 1 after a barline (patch by fnbecker)
      - fix #8308: Creating triplet in grace note leads to time corruption
       (ws)
      - fix #8358: new score: create one measure more when pickup measure selected
21.dec (mi)
      - in tablatures, changed Ctrl-Up/Dn to move same note on next string
20.dec (ws)
      - fix #8149: Note entry voice2 crash for 5/4 measure
       (la)
      - fix #8024: "Layout | Page settings" crashes the program
19.dec (lv)
      - fix #8327: Crash on tremolo between notes
       (ws)
      - fixed #8323: Layout wrong in print-outs, PDF and Page Settings
      (mi)
      - added FontForge source for mscore1-20.ttf (mscore1-20.sfd)
      - removed unused MScore1-20_new.ttf (anyway practically identical
        to current mscore1-20.ttf)
      - set TextStyleData::sizeIsSpatiumDependent default to false (as it is only
        written to file if it is true)
      - changed StaffTypeTabulature defaults in constructor to better suit
        modern guitar tabulature style.
      - Cosmetic changes to tabulature-related dlg boxes.
18.dec (lv)
      - MusicXML import/export of harmony
       (mi)
      - string tuning data of the instrument of a staff editable
        from Staff Properties dlg box.
      - Staff Properties dlg box: pitch ranges use readable note
        names instead of MIDI pitch codes
      - Staff Properties dlg box: changes of staff type to TAB or
        changes in TAB string data trigger note update.
17.dec (ws)
      - fix #6380: conflicting flag directions for sub-beams
      - fix #8278: inverse stem of grace note causes bad hook layout
16.dec (ws)
      - removed copyright text item from create menu
15.dec (ws)
      - fix #8277: crash when entering grace note